--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -14,7 +14,18 @@
   align-items: center;
   justify-content: space-between;
   padding: 60px 80px;
-  background: #FAF9F4;
+  background: linear-gradient(180deg,
+      #d3e0f2 0%,
+      #e2e9f7 15%,
+      #f3f4f6 45%,
+      #fdf1e9 60%,
+      #fdf1e9 90%,
+      #F3F4F6 100%);
+  /* background-attachment: fixed; */
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding-bottom: 100px;
+  /* border-bottom: 1px solid rgba(0, 0, 0, 0.05); */
 }
 
 .hero-content {
