--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ a:hover {
 input:not([type="checkbox"]), textarea {
   font-family: 'Plus Jakarta Sans', sans-serif !important;
   background-color: white !important;
+  color: black !important;
 }
 
 body {
